force-app/main/default/objects/loan__Payoff_Quote__c/loan__Payoff_Quote__c.object-meta.xml
<CustomObject>
    <label>Payoff Quote</label>
    <nameField>
        <label>Payoff Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payoff Quote</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>