force-app/main/default/objects/loan__Payoff_Quote__c/fields/loan__Poq_Interest_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>loan__Poq_Interest_Per_Diem__c</fullName>
    <label>Interest Per Diem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>