force-app/main/default/objects/loan__Payoff_Quote__c/fields/loan__Poq_Principal_Bal__c.field-meta.xml
<CustomField>
    <fullName>loan__Poq_Principal_Bal__c</fullName>
    <description>Principal Balance</description>
    <label>Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>