force-app/main/default/objects/loan__Payoff_Quote__c/fields/loan__Poq_Total_Payoff_Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Poq_Total_Payoff_Amount__c</fullName>
    <label>Total Payoff Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>