force-app/main/default/objects/loan__Payoff_Quote__c/fields/loan__Poq_Unpaid_Interest__c.field-meta.xml
<CustomField>
    <fullName>loan__Poq_Unpaid_Interest__c</fullName>
    <description>Interest not paid.</description>
    <label>Interest Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>