force-app/main/default/objects/loan__Payoff_Quote__c/fields/loan__Poq_valid_till_Dt__c.field-meta.xml
<CustomField>
    <fullName>loan__Poq_valid_till_Dt__c</fullName>
    <label>Payoff Date</label>
    <type>Date</type>
</CustomField>